refactor: QuarkusDebugRunConfig must not use StringUtils, because it is deprecated and will be removed